# IG_parser

./: .gitignore  DEPLOY.md  DEPLOY_VPS.md  LOCAL_RUN.md  README.md  pyproject.toml  requirements.txt  secrets_template.toml  streamlit_app.py
.cursor/rules/: deploy.mdc
.streamlit/: config.toml
app/: __init__.py  main.py  models.py
app/services/: apify_service.py  pipeline.py  pubmed_service.py  relevance_service.py  sheets_service.py  sync_state.py  table_storage.py  transcription_service.py  twitter_apify_client.py  twitter_pipeline.py
docs/: PLAN_AUTO_SYNC.md  TWITTER_ACTOR_CHOICE.md  ИНСТРУКЦИЯ_ДЛЯ_ПОЛЬЗОВАТЕЛЕЙ.md
scripts/: debug_apify_images.py  sync_worker.py  sync_worker_twitter.py  test_sheets.py
tests/: test_pipeline_transcription.py
